--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
 
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script type="module" src="../js/modelcontrol.js"></script>
+    <script type="module" src="../js/card.js"></script>
     <script type="module" src="../js/main.js"></script>
     <script src="https://kit.fontawesome.com/ba206f6878.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
