added firebase hosting

--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,7 @@
                     </ul>
                     <span>120-160$</span>
                 </div>
-                <div class="offer-card-selfmade" data-aos="zoom-in-up">
+                <div class="offer-card-selfmade" data-aos="zoom-in-right">
                     <h3>Large Scale Front-End Web Project</h3>
                     <hr>
                     <h5>7+ Pages</h5>
@@ -221,6 +221,19 @@
                         <li><i class="fas fa-check"></i> Content Upload</li>
                     </ul>
                     <span>220-270$</span>
+                </div>
+                <div class="offer-card-selfmade" data-aos="zoom-in-left">
+                    <h3>Custom Order</h3>
+                    <hr>
+                    <h5>Customized by user</h5>
+                    <p>Custom order just for you</p>
+                    <ul>
+                        <li><i class="fas fa-check"></i> 7-10 Day Delivery</li>
+                        <li><i class="fas fa-check"></i> Responsive</li>
+                        <li><i class="fas fa-check"></i> Unlimited Revisions</li>
+                        <li><i class="fas fa-check"></i> Content Upload</li>
+                    </ul>
+                    <span>Depends on order complexity</span>
                 </div>
             </article>
         </section>
