--- a/public/index.html
+++ b/public/index.html
@@ -320,7 +320,7 @@
                 Subject : "Website",
                 Body : `Text: ${TextInput.value}, Name: ${NameInput.value}, Number: ${NumberInput.value}`
             }).then(
-            message => alert(message)
+                alert("Mail has been sent successfully")
         );
     })
     </script>
