--- a/public/index.html
+++ b/public/index.html
@@ -301,13 +301,18 @@
                         </ul>
                     </div>
                 </aside>
+                <aside>
+                    <div>
+                        <img src="https://res.cloudinary.com/nikolozkipiani/image/upload/v1612607207/companylogo_yi3jr8.png" alt="">
+                    </div>
+                </aside>
             </section>
         </section>
     </main>
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
-    <script type="module" src="../js/modelcontrol.js"></script>
-    <script type="module" src="../js/card.js"></script>
-    <script type="module" src="../js/main.js"></script>
+    <script type="module" src="./js/modelcontrol.js"></script>
+    <script type="module" src="./js/card.js"></script>
+    <script type="module" src="./js/main.js"></script>
     <script src="https://kit.fontawesome.com/ba206f6878.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
